--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachBaiTap.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachBaiTap.cshtml
@@ -48,7 +48,7 @@
         </form>
         <div style="background-color: #fff; border-radius: 5px; width: 100%; margin-top: 20px; padding: 16px; border: 1px solid #dadada; border-radius: 5px;">
             <div style="display:flex; border-bottom: 1px solid #dadada">
-                <span style="flex: 1; text-align: center; padding: 10px 8px; color: #7f7f7f; font-weight: 500; ">Mã tài liệu</span>
+                <span style="flex: 1; text-align: center; padding: 10px 8px; color: #7f7f7f; font-weight: 500; ">Mã bài tập</span>
                 <span style="flex: 1; text-align: center; padding: 10px 8px; color: #7f7f7f; font-weight: 500; ">Tên tài liệu</span>
                 <span style="flex: 1; text-align: center; padding: 10px 8px; color: #7f7f7f; font-weight: 500; ">File upload</span>
                 <span style="flex: 1; text-align: center; padding: 10px 8px; color: #7f7f7f; font-weight: 500; ">Trạng thái</span>
