--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachLopHoc.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachLopHoc.cshtml
@@ -53,10 +53,10 @@
                 </a>
             }
         </div>
-        <div class="row gap-2" style=" border-radius: 5px; width: 100%; margin-top: 10px; background-color: white; width: 100%;">
+        <div style="display: grid; grid-template-columns: repeat(4,1fr); gap: 8px; border: 1px solid #dadada; border-radius: 5px; padding: 16px; margin-top: 10px; background-color: white;">
             @foreach (var item in Model)
             {
-                <div style="width: 25%; flex-wrap: wrap;  border-radius: 10px; border: 1px solid #d2d2d2 ; background-color: white; padding: 0 12px 0;">
+                <div style="grid-column: span 1; border-radius: 10px; border: 1px solid #d2d2d2 ; background-color: white; padding: 0 12px 0;">
                     <img src="~/Content/HinhAnh/GiaoDien/yola-english-high-resolution-logo.png" alt="@item.TenLop" style="display: block ; width: 100%; height: 150px;" />
                     <div style="height: 190px; background-color: #fff;">
                         <span style="font-size: 16px; font-weight: 500;">@item.TenLop</span>
