--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ChiTietHocVien.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ChiTietHocVien.cshtml
@@ -68,10 +68,7 @@
                             <div style="width: 100%">
                                 <label style="font-size: 15px; color: #374151; font-weight: 500;" for="MatKhau">Mật khẩu: </label>
                                 <div style="position: relative">
-                                    @Html.TextBoxFor(model => model.NguoiDung.MatKhau, new { @readonly = "readonly", @type = "password", @id = "MatKhau", @class = "form-control mt-2", placeholder = "Nhập mật khẩu" })
-                                    <button type="button" style="position: absolute; right: 8px; top: 12px;" onclick="handleClickChangeEye('MatKhau')">
-                                        <i class="iconEye fa-solid fa-eye-slash"></i>
-                                    </button>
+                                    <input type="text" name="NguoiDung.MatKhau" value="" class="form-control mt-2" style="padding-right: 20px;" id="MatKhau" readonly placeholder="Nhập mật khẩu mới" />
                                     <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errMatKhau"></span>
                                 </div>
                             </div>
