--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThongTinNguoiDung.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThongTinNguoiDung.cshtml
@@ -1,9 +1,11 @@
-﻿@model QL_TrungTamAnhNgu.Models.QuanTriVien
-@using QL_TrungTamAnhNgu.Models
+﻿@using QL_TrungTamAnhNgu.Models;
+@model QL_TrungTamAnhNgu.Models.QuanTriVien
+
 @{
-    ViewBag.Title = "ChiTietQuanTriVien";
+    ViewBag.Title = "ThongTinNguoiDung";
     Layout = "~/Views/Shared/_LayoutQuanTriVien.cshtml";
 }
+
 
 <div>
     <header style="position: sticky; left:0 ; top: 0; background-color: #fff; display: flex; align-items: center; justify-content: space-between; padding: 0px 16px; border-bottom: 1px solid #edede9; height: 80px;">
@@ -41,10 +43,10 @@
             <span style="color: #000; ">Chi tiết</span>
         </div>
         <div class="d-flex justify-content-between">
-            <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px; display: block">Thông tin quản trị viên</h1>
+            <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px; display: block">Thông tin người dùng</h1>
         </div>
         <div style="background-color: #fff; border-radius: 5px; width: 100%; margin-top: 10px; padding: 16px; border: 1px solid #dadada; width: 100%;">
-            <form class="myForm" action="/QuanTriVien/ChiTietQuanTriVien" method="post" enctype="multipart/form-data">
+            <form class="myForm" action="/QuanTriVien/ThongTinNguoiDung" method="post" enctype="multipart/form-data">
                 <div style="width: 100%;" class="d-flex">
                     <div style="width: 60%;">
                         <div class="d-flex justify-content-between gap-4">
@@ -111,20 +113,7 @@
                                 @Html.TextBoxFor(model => model.ChucVu, new { @readonly = "readonly", @id = "ChucVu", @class = "form-control mt-2" })
                                 <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errMoTa"></span>
                             </div>
-                            <div style="width: 100%">
-                                <label style="font-size: 15px; color: #374151; font-weight: 500;" for="TrangThai">Trạng thái:</label>
-                                @if (@Model.NguoiDung.MaNhomND == "NND001")
-                                {
-                                    @Html.TextBoxFor(model => model.NguoiDung.TrangThai, new { @readonly = "readonly", @id = "TrangThai_1", @class = "form-control mt-2" }) 
-                                }
-                                else
-                                {
-                                      <select id="TrangThai" name="NguoiDung.TrangThai" class="form-control mt-2" disabled>
-                                    <option value="Đang hoạt động" @(Model.NguoiDung.TrangThai == "Đang hoạt động" ? "selected" : "")>Đang hoạt động</option>
-                                    <option value="Đã khóa" @(Model.NguoiDung.TrangThai == "Đã khóa" ? "selected" : "")>Đã khóa</option>
-                                </select>
-                                }
-                            </div>
+                           
                         </div>
                     </div>
                     <div style="margin: 20px 0 20px 40px; width: 2px; height: 400px; background-color: #dadada"></div>
